--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,19 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-typer = "^0.12.0"
-autoflake = "^2.3.1"
+python = ">=3.10"
+typer = ">0.10.0"
+autoflake = ">2.0.0"
 jinja2 = "^3.1.3"
-black = "^24.3.0"
+black = ">23.0.0"
 isort = "^5.13.2"
 rich = "^13.7.1"
 httpx = "^0.27.0"
-dataclasses-avroschema = {extras = ["faust"], version = "^0.58.0"}
+dataclasses-avroschema = {extras = ["faust"], version = ">=0.58.0"}
 mode-streaming = "<0.4.0"
-pydantic = "^2.6.4"
+pydantic = ">1.0.0"
 plumbum = "^1.8.2"
-tomlkit = "^0.12.4"
+tomlkit = ">=0.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
