--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "faust-avro-model-codegen"
-version = "0.1.1"
+version = "0.1.2"
 description = "Generate Faust Avro Models from Avro Schema files."
 authors = ["Sean Zicari <szicari@streambit.software, Brad Boggs <bboggs@streambit.software>"]
 license = "MIT"
@@ -9,7 +9,7 @@ repository = "https://github.com/bboggs-streambit/faust-avro-model-codegen"
 
 [tool.poetry.dependencies]
 python = ">=3.10"
-typer = ">0.10.0"
+typer = ">=0.9.0"
 autoflake = ">2.0.0"
 jinja2 = "^3.1.3"
 black = ">23.0.0"
