--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "faust-avro-model-codegen"
-version = "0.1.5"
+version = "0.1.6"
 description = "Generate Faust Avro Models from Avro Schema files."
 authors = ["Sean Zicari <szicari@streambit.software, Brad Boggs <bboggs@streambit.software>"]
 license = "MIT"
@@ -15,7 +15,7 @@ jinja2 = "^3.1.3"
 black = ">23.0.0"
 isort = "^5.13.2"
 rich = "^13.7.1"
-httpx = "^0.27.0"
+httpx = ">=0.24.0"
 dataclasses-avroschema = {extras = ["faust"], version = ">=0.58.0"}
 mode-streaming = "<0.4.0"
 pydantic = ">1.0.0"
